src/objects/Relationship_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Association_Type__c</fullName>
        <label>Association Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Hierarchy</relationshipLabel>
        <relationshipName>Relationship_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <label>Influence (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Hierarchy (Parent Account)</relationshipLabel>
        <relationshipName>Relationship_Hierarchy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WCIS_Last_Call_Status__c</fullName>
        <label>WCIS Last Call Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WCIS_Last_Call_Time__c</fullName>
        <label>WCIS Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <label>Relationship Hierarchy</label>
    <nameField>
        <label>Relationship Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_and_child_not_same</fullName>
        <active>true</active>
        <errorConditionFormula>Child_Account__c ==  Parent_Account__c</errorConditionFormula>
        <errorMessage>Child and parent can not be same</errorMessage>
    </validationRules>
</CustomObject>